-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.5.0, Lustre 2.6.0
-
None
-
3
-
13161
Params llog was introduced by LU-3155 to use "lctl set_param -P" to set parameters permanently instead of "lctl conf_param". But during investigation on LU-3410 I find that when a new filesystem is mounted, params llog won't be created automatically until "set_param -P" is called. So before running "set_param -P", there is no params llog in mgs and the other servers can't make a local copy successfully.
This causes the console error message "LustreError: 13a-8: Failed to get MGS log params and no local copy."is printed.
I will push a patch later.
- is related to
-
LU-3410 mgc_copy_llog()) Failed to copy remote log routed1-OST00b3 (-2) ecountered during bring up of a 2.4 file system
-
- Closed
-