LU-4783 mgs: start params log during mgs initialization

Params log was introduced by LU-3155 to set parameters permanently
with lctl "set_param -P" instead of "conf_param". But in a newly
mounted filesystem, the log won't be created automatically until
"lctl set_param -P" is called. This causes that the other servers
can't make a local copy successfully during their setup, and the
misleading console error message "LustreError: 13a-8: Failed to get
MGS log params and no local copy." is printed.
This patch is to start params log during mgs intialization so that
the error message is quieted.

Signed-off-by: Emoly Liu <emoly.liu@intel.com>
Change-Id: Ifc3abc1e35ef20230a1be1cdf1c4cc8f57b2788e